added view note

--- a/notes-app-api/serverless.yml
+++ b/notes-app-api/serverless.yml
@@ -13,6 +13,8 @@ provider:
   runtime: nodejs8.10
   stage: prod
   region: ca-central-1
+  environment:
+    TABLE_NAME: notesapp
 
   # 'iamRoleStatements' defines the permission policy for the Lambda function.
   # In this case Lambda functions are granted with permissions to access DynamoDB.
